tests/fail/fail_return_type_mismatch.kl
fn dobra(nter x) nter {
    divolvi "nau e um nter";
}

fn inisiu() {
    nter a = dobra(3);
    mostran(f"{a}");
}
